--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,15 @@ body {
     
     
 }
+
+#custom-wrapper {
+    background-color: skyblue;
+    margin-bottom: 2em;
+    -webkit-font-smoothing: antialiased;
+    height: 10em;
+    overflow:hidden;
+    -webkit-transition: height 0.5s;
+    -moz-transition: height 0.5s;
+    -ms-transition: height 0.5s;
+    transition: height 0.5s;
+}
